@@ -1,0 +1,8 @@
+<?php
+class testRuleAppliesToMethodWithExitExpression
+{
+    protected function testRuleAppliesToMethodWithExitExpression()
+    {
+        exit(0);
+    }
+}
