@@ -1,0 +1,8 @@
+<?php
+class testRuleNotAppliesToMethodWithoutExitExpression
+{
+    public function testRuleNotAppliesToMethodWithoutExitExpression()
+    {
+        echo __METHOD__;
+    }
+}
